Address TeamScale code violations.