@@ -49,7 +49,6 @@ import com.apple.foundationdb.record.query.plan.cascades.values.Value;
 import com.apple.foundationdb.record.query.plan.cascades.values.translation.TranslationMap;
 import com.google.auto.service.AutoService;
 import com.google.common.base.Verify;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.protobuf.Message;
 
@@ -81,7 +80,7 @@ public class RecordQueryRecursiveDfsJoinPlan implements RecordQueryPlanWithChild
         this.rootQuantifier = rootQuantifier;
         this.childQuantifier = childQuantifier;
         this.priorValueCorrelation = priorValueCorrelation;
-        this.resultValue = RecordQuerySetPlan.mergeValues(ImmutableList.of(rootQuantifier, childQuantifier));
+        this.resultValue = RecordQuerySetPlan.mergeValues(List.of(rootQuantifier, childQuantifier));
     }
 
     @Nonnull
@@ -130,7 +129,7 @@ public class RecordQueryRecursiveDfsJoinPlan implements RecordQueryPlanWithChild
     @Nonnull
     @Override
     public List<RecordQueryPlan> getChildren() {
-        return ImmutableList.of(rootQuantifier.getRangesOverPlan(), childQuantifier.getRangesOverPlan());
+        return List.of(rootQuantifier.getRangesOverPlan(), childQuantifier.getRangesOverPlan());
     }
 
     @Nonnull
@@ -281,7 +280,7 @@ public class RecordQueryRecursiveDfsJoinPlan implements RecordQueryPlanWithChild
     @Nonnull
     @Override
     public List<? extends Quantifier> getQuantifiers() {
-        return ImmutableList.of(rootQuantifier, childQuantifier);
+        return List.of(rootQuantifier, childQuantifier);
     }
 
     @Nonnull
@@ -290,7 +289,7 @@ public class RecordQueryRecursiveDfsJoinPlan implements RecordQueryPlanWithChild
         return PlannerGraph.fromNodeAndChildGraphs(
                 new PlannerGraph.OperatorNodeWithInfo(this,
                         NodeInfo.NESTED_LOOP_JOIN_OPERATOR,
-                        ImmutableList.of("RECURSIVE {{expr}}"),
+                        List.of("RECURSIVE {{expr}}"),
                         ImmutableMap.of("expr", Attribute.gml(getResultValue().toString()))),
                 childGraphs,
                 getQuantifiers());
